# zerodupe

./: .gitignore  Cargo.toml  LICENSE  README.es.md  README.md  THIRD_PARTY_LICENSES.md  about.hbs  about.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
crates/zerodupe_benchkit/: Cargo.toml  README.md
crates/zerodupe_benchkit/src/: main.rs
crates/zerodupe_cache/: Cargo.toml
crates/zerodupe_cache/src/: lib.rs
crates/zerodupe_cli/: Cargo.toml
crates/zerodupe_cli/src/: i18n.rs  main.rs
crates/zerodupe_cli/tests/: e2e_pipeline.rs
crates/zerodupe_config/: Cargo.toml
crates/zerodupe_config/src/: config.rs  error.rs  folders.rs  lib.rs  reports.rs  resume.rs
crates/zerodupe_core/: Cargo.toml
crates/zerodupe_core/src/: cancellation.rs  categorizer.rs  lib.rs  progress.rs
crates/zerodupe_fs/: Cargo.toml
crates/zerodupe_fs/src/: lib.rs
crates/zerodupe_hash/: Cargo.toml
crates/zerodupe_hash/benches/: hash.rs
crates/zerodupe_hash/src/: lib.rs
crates/zerodupe_hash/tests/: sentinel.rs
crates/zerodupe_hygiene/: Cargo.toml
crates/zerodupe_hygiene/rules/: camera_sidecars.toml  os_patterns.toml  user_custom.toml
crates/zerodupe_hygiene/src/: blacklist.rs  lib.rs  manifest.rs  orphan.rs  report.rs  takeout.rs  types.rs
crates/zerodupe_hygiene/src/detectors/: broken_symlinks.rs  cache_files.rs  empty_dirs.rs  empty_files.rs  mod.rs  system_junk.rs  temporary_files.rs
crates/zerodupe_platform/: Cargo.toml
crates/zerodupe_platform/assets/: canonical_roots.toml  junk_locations.toml  protected_paths.toml  system_excludes.toml
crates/zerodupe_platform/src/: assets.rs  lib.rs  linux.rs  macos.rs  mock.rs  normalizer.rs  patterns.rs  physkey.rs  protection.rs  windows.rs
crates/zerodupe_platform/src/backends/: mod.rs
crates/zerodupe_policy/: Cargo.toml
crates/zerodupe_policy/src/: lib.rs  weights.rs
crates/zerodupe_report/: Cargo.toml
crates/zerodupe_report/src/: html.rs  i18n.rs  lib.rs
crates/zerodupe_safety/: Cargo.toml
crates/zerodupe_safety/src/: lib.rs
crates/zerodupe_scan/: Cargo.toml
crates/zerodupe_scan/benches/: pipeline.rs
crates/zerodupe_scan/src/: lib.rs
crates/zerodupe_scan/tests/: cache_pipeline.rs  golden_pipeline.rs
crates/zerodupe_similar/: Cargo.toml
crates/zerodupe_similar/src/: lib.rs
crates/zerodupe_similar/tests/: bktree.rs  prior_keepers.rs
crates/zerodupe_similar_image/: Cargo.toml
crates/zerodupe_similar_image/benches/: fingerprint.rs
crates/zerodupe_similar_image/examples/: analyze_missed.rs
crates/zerodupe_similar_image/src/: lib.rs
crates/zerodupe_similar_image/tests/: edit_variants.rs  fp_cache.rs  invariance.rs  raw.rs
crates/zerodupe_workflow/: Cargo.toml
crates/zerodupe_workflow/src/: action.rs  error.rs  lib.rs  notifier.rs  state.rs  summary.rs  workflow.rs
crates/zerodupe_workflow/tests/: keeper_protection.rs  similar_flow.rs
