[package]
name = "zerodupe_config"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
uuid.workspace = true
zerodupe_core.workspace = true
zerodupe_policy.workspace = true
zerodupe_similar.workspace = true

[dev-dependencies]
tempfile.workspace = true
