[package]
name = "zerodupe_core"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
camino.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
zerodupe_platform.workspace = true

[dev-dependencies]
serde_json.workspace = true
