[package]
name = "zerodupe_hash"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
blake3.workspace = true
serde.workspace = true
zerodupe_core.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "hash"
harness = false
