[package]
name = "zerodupe_platform"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
camino.workspace = true
dirs.workspace = true
serde.workspace = true
toml.workspace = true
trash = "5"

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[features]
testing = []
