[package]
name = "zerodupe_report"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
time.workspace = true
zerodupe_core.workspace = true
zerodupe_hygiene.workspace = true
zerodupe_similar.workspace = true
