[package]
name = "zerodupe_safety"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
camino.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
zerodupe_core.workspace = true
zerodupe_platform.workspace = true
